Fixed width overflow

--- a/styles.less
+++ b/styles.less
@@ -16,6 +16,7 @@
   align-items: center;
   flex-grow: 1;
   justify-content: space-between;
+  box-sizing: border-box;
 }
 
 
@@ -25,7 +26,6 @@
 
 .footer {
   background-color: @secondary;
-  //padding: 10px;
   position: absolute;
   width: 100%;
   bottom: 0;
@@ -33,6 +33,7 @@
   right: 0;
   height: 20px;
   padding: 10px;
+  box-sizing: border-box;
 }
 
 .container {
@@ -49,6 +50,7 @@
   left:0;
   padding-bottom: 30px;
   width: 100%;
+  box-sizing:border-box;
 }
 
 .menu {
@@ -63,6 +65,8 @@
 .body {
   color: @text;
   margin: 10px;
+  max-width: 100%;
+  box-sizing: border-box;
 }
 
 
